# AquaMVS

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml  requirements-prereqs.txt
.github/workflows/: docs.yml  lint.yml  publish.yml  slow-tests.yml  test.yml
.hooks/: pre-push-docs.sh  pre-push-ruff-check.sh  pre-push-ruff-format.sh  pre-push-tests.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: ci-test-failures.md
.planning/debug/resolved/: ci-open3d-segfault.md
.planning/inbox/: techniques-report.md
.planning/phases/01-dependency-resolution-and-packaging-foundations/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/01.1-last-minute-feature-additions/: 01.1-01-PLAN.md  01.1-01-SUMMARY.md  01.1-02-PLAN.md  01.1-02-SUMMARY.md  01.1-CONTEXT.md  01.1-RESEARCH.md  01.1-VERIFICATION.md
.planning/phases/02-configuration-and-api-cleanup/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-pipeline-decomposition-and-modularization/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-documentation-and-examples/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-07-PLAN.md  04-07-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-performance-and-optimization/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-06-PLAN.md  05-06-SUMMARY.md  05-07-PLAN.md  05-07-SUMMARY.md  05-08-PLAN.md  05-08-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-cli-qa-execution/: 06-01-PLAN.md  06-02-PLAN.md  06-03-PLAN.md  06-04-PLAN.md  06-05-PLAN.md  06-CONTEXT.md  06-RESEARCH.md
.planning/phases/07-post-qa-bug-triage/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-user-guide-and-tutorials-overhaul/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-04-PLAN.md  08-CONTEXT.md  08-RESEARCH.md
.planning/qa/: 06-01-CHECKLIST.md  06-02-CHECKLIST.md  06-03-CHECKLIST.md  06-04-CHECKLIST.md  06-05-CHECKLIST.md  issues-found.md
.planning/quick/1-add-slow-test-workflow-adopt-ruff-pre-co/: 1-PLAN.md  1-SUMMARY.md
.planning/quick/2-fix-pre-commit-lint-issues-noqa-directiv/: 2-PLAN.md  2-SUMMARY.md
.planning/quick/3-fix-test-failures-from-pydantic-config-m/: 3-PLAN.md  3-SUMMARY.md
.planning/quick/4-optimize-aquamvs-preprocess-for-speed-an/: 4-PLAN.md  4-SUMMARY.md
.planning/quick/5-two-pass-pipeline-compute-then-viz/: 5-SUMMARY.md
.planning/quick/7-replace-benchmark-ipynb-with-docs-script/: 7-PLAN.md  7-SUMMARY.md  7-VERIFICATION.md
.planning/quick/8-optimize-roma-pipeline-memory-usage-redu/: 8-PLAN.md  8-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/pending/: 2026-02-14-mint-a-zenodo-doi.md  2026-02-15-build-portfolio-website-for-aqua-libraries.md  2026-02-15-write-project-retrospective.md  2026-02-16-fix-benchmark-package-broken-imports-and-stale-test-wiring.md  2026-02-16-fix-pre-existing-integration-test-failure-empty-fused-cloud.md  2026-02-16-update-example-dataset-to-13-camera-set.md  2026-02-18-repackage-example-dataset-with-updated-pydantic-config.md  2026-02-20-rename-ring-camera-to-core-camera-across-codebase.md
docs/: benchmarks.rst  cli_guide.md  cli_guide.rst  conf.py  index.rst  installation.rst  make.bat  troubleshooting.rst
docs/_static/benchmark/: benchmark_20260228_190016.md
docs/api/: calibration.rst  cli.rst  config.rst  index.rst  pipeline.rst  reconstruction.rst
docs/scripts/: generate_benchmark_figures.py  make_readme_gif.py
docs/theory/: dense_stereo.rst  fusion.rst  index.rst  refractive_geometry.rst
docs/tutorial/: benchmark.ipynb  index.rst  notebook.ipynb
example_data/: README.md
scripts/: package_example_dataset.py
src/aquamvs/: __init__.py  calibration.py  cli.py  coloring.py  config.py  fusion.py  io.py  masks.py  pipeline.py  preprocess.py  surface.py  triangulation.py
src/aquamvs/benchmark/: __init__.py  comparison.py  config.py  datasets.py  metrics.py  report.py  runner.py  synthetic.py  synthetic_benchmark.py  visualization.py
src/aquamvs/dense/: __init__.py  cost.py  plane_sweep.py  roma_depth.py
tests/: __init__.py  conftest.py  test_calibration.py  test_cli.py  test_coloring.py  test_config.py  test_integration.py  test_masks.py  test_notebook_smoke.py  test_pipeline.py  test_roma_import.py  test_surface.py  test_triangulation.py
tests/benchmarks/: __init__.py  test_ci_benchmarks.py
tests/test_benchmark/: __init__.py  test_metrics.py  test_report.py  test_runner.py  test_synthetic.py  test_visualization.py
tests/test_dense/: test_cost.py  test_depth_extraction.py  test_plane_sweep.py  test_roma_depth.py
tests/test_evaluation/: test_alignment.py  test_metrics.py
tests/test_features/: __init__.py  test_extraction.py  test_matching.py  test_pairs.py  test_roma.py
tests/test_fusion/: __init__.py  test_consistency.py  test_fusion.py
tests/test_projection/: __init__.py  test_cross_validation.py  test_protocol.py  test_refractive.py
tests/test_visualization/: __init__.py  test_depth_viz.py  test_features_viz.py  test_rig_viz.py  test_scene_viz.py  test_summary_viz.py
(+35 files in other folders)
