[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aquamvs"
version = "1.1.3"
description = "Multi-view stereo reconstruction of underwater surfaces with refractive modeling"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tucker Lancaster"}
]
keywords = ["multi-view-stereo", "underwater", "refraction", "computer-vision", "depth-estimation"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "kornia>=0.7.0",
    "open3d>=0.18.0",
    "opencv-python>=4.6.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "aquacal>=0.1.0",
    "lightglue",
    "romav2",
    "pydantic>=2.12.0",
    "tqdm>=4.66.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
    "sphinx",
    "furo",
    "sphinxcontrib-mermaid",
    "myst-parser",
    "mypy",
    "python-semantic-release",
    "build",
]

[project.urls]
Repository = "https://github.com/tlancaster6/AquaMVS"

[project.scripts]
aquamvs = "aquamvs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*"]

[tool.setuptools]
include-package-data = false

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version}"
build_command = "pip install build && python -m build"
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM105", "SIM108", "SIM117", "SIM118"]

[tool.ruff.lint.isort]
known-first-party = ["aquamvs"]
